# GildedRose-Refactoring-Kata

python/: generate_item_test_data.py  gilded_rose.py  items.py  items_data.csv  pyproject.toml  test_gilded_rose.py  texttest_fixture.py
rust/src/: gildedrose.rs
