[tool.poetry]
name = "gildedrose"
version = "0.1.0"
description = ""
authors = ["Ant <anthony.hillairet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99

[tool.ruff.format]
# Use single quotes rather than double quotes.
quote-style = "single"
